# Havoc_Custom

./: .gitignore  README.md  makefile
client/: CMakeLists.txt
client/data/: Default.css  Havoc.qrc  hc-convert.sh
client/data/config-examples/: python_script.toml  repository.toml
client/data/design/: HcMarketPluginItem.ui  HcStoreWidget.ui
client/data/icons/: 16px-file-list-white.png.bkp
client/include/: Common.h  Events.h  Havoc.h
client/include/api/: Engine.h  HcAgent.h  HcCore.h  HcScriptManager.h
client/include/core/: HcAgent.h  HcEventWorker.h  HcHeartbeatWorker.h  HcHelper.h  HcStorePluginWorker.h  Helper.h
client/include/ui/: HcConsole.h  HcDialogBuilder.h  HcLineEdit.h  HcMainWindow.h  HcPageAgent.h  HcPageListener.h  HcPageScript.h  HcStoreWidget.h  HcTheme.h
client/python/pyhavoc/: __init__.py  agent.py  core.py  scriptmngr.py  ui.py
client/src/: Events.cc  Havoc.cc
client/src/api/: Engine.cc  HcAgent.cc  HcCore.cc  HcEngine.cc  HcScriptManager.cc
client/src/core/: EventWorker.cc  HcAgent.cc  HcEventWorker.cc  HcHeartbeatWorker.cc  HcHelper.cc  HcStorePluginWorker.cc
client/src/ui/: HcConnectDialog.cc  HcConsole.cc  HcDialogBuilder.cc  HcLineEdit.cc  HcListenerDialog.cc  HcMainWindow.cc  HcPageAgent.cc  HcPageBuilder.cc  HcPageListener.cc  HcPageScript.cc  HcStoreWidget.cc  HcTheme.cc
client/tests/python/: kaine_commands.py  kaine_payload.py  listener_http.py
data/certs/: default.crt  default.key
profiles/: custom_ssl.toml  havoc-kaine.toml
server/: go.mod  go.sum
server/cmd/: cmd.go  server.go
server/cmd/server/: agent.go  core.go  events.go  listener.go  server.go  teamserver.go  types.go  users.go
server/pkg/api/: agent.go  api.go  listener.go
server/pkg/plugin/: agent.go  listener.go  plugin.go
server/pkg/profile/: config.go  profile.go
teamserver/pkg/agent/: agent.go
